--- a/serenity.properties
+++ b/serenity.properties
@@ -1,1 +1,3 @@
 serenity.project.name=Serenity and Cucumber Quick Start
+webdriver.timeouts.implicitlywait = 40000
+webdriver.timeouts.fluentwait = 20000
